<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_profile_details_scene"
        tools:context=".ui.fragment.profileDetails.ProfileDetailsFragment">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/name_text_view"
            app:layout_constraintStart_toStartOf="@+id/edit_text_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin4dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_view_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/surname_text_view"
            app:layout_constraintStart_toStartOf="@+id/edit_text_surname"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin4dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_surname"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/edit_text_surname"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_surname" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin4dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text_warn"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/edit_text_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_phone"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/email_text_view"
            app:layout_constraintStart_toStartOf="@+id/edit_text_surname"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin4dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/edit_text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_view_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/share_text_view"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/edit_text_surname"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

        <TextView
            android:id="@+id/text_view_swiper"
            android:layout_width="40dp"
            android:layout_height="14dp"
            android:background="@drawable/bg_edit_swiper"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/text_view_share"
            app:layout_constraintTop_toTopOf="@+id/text_view_share" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_swiper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/swiper_button"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_switch"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_swiper"
            app:layout_constraintStart_toStartOf="@+id/text_view_swiper"
            app:layout_constraintTop_toTopOf="@+id/text_view_swiper"
            tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textAppearance="@style/ButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_share" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>