<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.contact.ContactFragment">

        <TextView
            android:id="@+id/text_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/contact"
            android:textAlignment="textStart"
            android:textAppearance="@style/CardHeaderText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_card_filled"
            android:orientation="vertical"
            android:paddingVertical="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_contact"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/text_view_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:text="@string/address" />

            <TextView
                android:id="@+id/text_view_address_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin4dp"
                android:text="@string/address_val"
                android:textAppearance="@style/CardHeaderText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin8"
                android:elevation="@dimen/margin4dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="@+id/text_contact"
                app:layout_constraintTop_toBottomOf="@+id/text_view_address_val" />

            <TextView
                android:id="@+id/text_view_email_address_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin4dp"
                android:text="@string/email_address_val"
                android:textAppearance="@style/CardHeaderText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_view_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin8"
                android:elevation="@dimen/margin4dp"
                android:text="@string/contact_number" />

            <TextView
                android:id="@+id/text_view_contact_number_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin4dp"
                android:text="@string/contact_number_val"
                android:textAppearance="@style/CardHeaderText"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_contact">

            <fragment
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

    <!--
       <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.4"
                app:layout_constraintTop_toTopOf="parent" />
    -->