<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="notificationItem"
            type="aslan.aslanov.safarovtask.model.NotificationItem" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/notification_image" />

        <TextView
            android:id="@+id/text_view_notification_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{notificationItem.title}"
            tools:text="@string/notification_text"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/CardHeaderText"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/image_view_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{notificationItem.date}"
            tools:text="@string/share_date_notification"
            android:textAppearance="@style/CardSubHeaderText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_notification_description"
            app:layout_constraintTop_toBottomOf="@+id/text_view_notification_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>