<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="carouselItem"
            type="aslan.aslanov.safarovtask.model.CarouselItem" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin24"
        android:background="@drawable/bg_card_outline"
        app:cardElevation="@dimen/margin24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_carousel"
                android:layout_width="58dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/carusel_image"
                android:src="@drawable/ic_maps" />

            <TextView
                android:id="@+id/text_view_carousel_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_regular"
                android:text="@{carouselItem.title}"
                android:textAppearance="@style/CardHeaderText"
                android:textStyle="bold"
                tools:text="@string/header" />

            <TextView
                android:id="@+id/text_view_carousel_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin24"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/margin24"
                android:fontFamily="@font/sf_regular"
                android:text="@{carouselItem.subtitle}"
                android:textAlignment="center"
                android:textAppearance="@style/CardSubHeaderText"
                android:textColor="#757575"
                tools:text="@string/sub_header" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>